@@ -136,7 +136,7 @@ setup(name='rasterio',
       license='BSD',
       package_dir={'': '.'},
       packages=['rasterio'],
-      scripts = ['scripts/rasterio.insp', 'scripts/rio_cp'],
+      scripts = ['scripts/rasterio.insp', 'scripts/rio_cp', 'scripts/rio_insp'],
       include_package_data=True,
       ext_modules=ext_modules,
       zip_safe=False,
